Katagori içerik sayfası oluşturuldu. Bağlantısı verildi. veritabanı oluşturuldu. ve fonksiyonlar yazıldı. Katagori sayfa tasarımı tamamlandı jsonla bağlantısı yapılacak.

--- a/app/src/main/res/layout/favoriler.xml
+++ b/app/src/main/res/layout/favoriler.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Kitaplik">
-
+    tools:context=".Favoriler">
 
     <include
         layout="@layout/toolbar"
@@ -81,6 +80,5 @@
                 android:textStyle="bold" />
         </RelativeLayout>
     </LinearLayout>
-
 
 </LinearLayout>
