--- a/app/src/main/res/layout/katagori_satir.xml
+++ b/app/src/main/res/layout/katagori_satir.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -13,15 +11,14 @@
             android:id="@+id/katagori_resim"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:src="@drawable/kus" />
+            android:scaleType="centerCrop" />
 
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            app:srcCompat="@drawable/kategori_trans" />
+            android:src="@drawable/kategori_trans" />
 
         <TextView
             android:id="@+id/katagori_adi"
