--- a/app/src/main/res/layout/kitaplik_icerik.xml
+++ b/app/src/main/res/layout/kitaplik_icerik.xml
@@ -4,8 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".Kitaplik"
-    tools:showIn="@layout/anasayfa">
+    tools:context=".Kitaplik_icerik">
 
+    <include
+        layout="@layout/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </android.support.constraint.ConstraintLayout>
