--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -4,13 +4,14 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:background="@color/tobbar_bg"
-    >
+    android:background="@android:color/white">
 
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="0dp"
+        android:padding="0dp">
 
         <ImageView
             android:id="@+id/logo"
@@ -18,6 +19,17 @@
             android:layout_height="wrap_content"
             android:scaleType="fitCenter"
             android:src="@mipmap/ic_launcher" />
+
+        <TextView
+            android:id="@+id/tobbar_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="40dp"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:text="Kitaplık"
+            android:textStyle="bold" />
     </LinearLayout>
 
 </android.support.v7.widget.Toolbar>
