Jsondan veri çekimi yapıldı Gelen veriler Ayrıştılıp listelendi Seekbar kütüphanesi yüklendi Müzikler Çalmaya başlandı. Favoriler kaydedildi. Splah ekran logosu düzeltildi.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#474368</color>
     <color name="colorAccent">#ff7473</color>
     <color name="tobbar_bg">#f4f4f4</color>
+    <color name="prgwhite">#ffffff</color>
 </resources>
